<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemShareCreate"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/shareRoomLinkLabel"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemMarkFavorite"
        android:icon="@drawable/ic_baseline_star_outline_24"
        android:title="@string/markAsFavouriteLabel"
        app:showAsAction="always"/>
    <item
        android:id="@+id/itemRequestModerator"
        android:icon="@drawable/ic_baseline_gavel_24"
        android:title="@string/requestModeratorLabel"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemEditRoomSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/roomSettingsLabel"
        app:showAsAction="always" />
</menu>