<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/roomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalButtonsTop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalButtonsBottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalFooterBottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.925" />

    <TextView
        android:id="@+id/roomHeadline"
        style="@style/textViewHeaderStyleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameOfTheRoomLabel"
        app:layout_constraintBottom_toTopOf="@id/roomDescription"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomDescription"
            style="@style/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLabel"
            app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/roomHeadline" />

        <TextView
            android:id="@+id/roomPhaseText"
            style="@style/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createPhaseLabel"
            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalButtonsTop"
            app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addContribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalButtonsBottom"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalButtonsBottom"
        android:backgroundTint="@color/lightGreen"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_skip_next_24"
            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalButtonsTop"
            app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalText"
            android:backgroundTint="@color/lightGreen"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contributionArea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/layout_buttonbackground"
            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalButtonsBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
            app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalButtonsTop">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contributionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:padding="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_contribution_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/roomProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonBackgroundGrey"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>